# variant

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  variant.hpp
